Move HTTPError struct from model to types and update references
