# internal/model/model.go
@@ -6,14 +6,6 @@ import (
 	"github.com/crazydw4rf/book-stock-manager/internal/entity"
 )
 
-type HTTPError struct {
-	Code      int    `json:"code" example:"400"`
-	Message   string `json:"message" example:"Invalid request payload"`
-	Error     string `json:"error,omitempty" example:"Bad Request"`
-	Timestamp string `json:"timestamp,omitempty" example:"2023-12-01T12:34:56Z"`
-	Path      string `json:"path,omitempty" example:"/books"`
-}
-
 type DataResponse[T any] struct {
 	Data T `json:"data"`
 }
